--- a/styles/style.css
+++ b/styles/style.css
@@ -184,8 +184,17 @@ ol {
 	background-color: #545050;
 }
 
+.content__video-card-title {
+	font-family: "Oswald", sans-serif;
+	font-weight: 700;
+	font-size: 30px;
+	line-height: 30px;
+}
+
 .content__video-card-description {
 	line-height: 0.9;
+	font-size: 18px;
+	font-family: "Fira Sans Condensed", sans-serif;
 }
 
 .search-form__fieldset {
