--- a/styles/style.css
+++ b/styles/style.css
@@ -189,6 +189,8 @@ ol {
 	font-weight: 700;
 	font-size: 30px;
 	line-height: 30px;
+	text-transform: uppercase;
+	margin-bottom: 6px;
 }
 
 .content__video-card-description {
